review problems fixed